[package]
name = "splitter-bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rmp-serde = "1.1.0"
serde = {version  = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng" ] }
walkdir = "2.3.2"
libafl = { path = "../../../libafl/" }
